human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_7.wast
(assert_malformed
  (module quote "(func (i32.const 0) (loop (param $x i32) (drop)))")
  "unexpected token"
)